DO NOT MERGE: Dead branch, committing for historical purposes only.
- Moved Liquibase logic and operations to the new LiquibaseWrapper
  class.
- Updated CandlepinContextListener to use the new LiquibaseWrapper
- Updated the LiquibaseExtension for junit to use the
  LiquibaseWrapper

This commit/branch is being pushed purely for historical purposes
for if or when this is revisited in the future. At the time of
writing, for every good thing it does, it adds one or more hacky
things that will make testing/verification very difficult.